--- a/controllers/statistics/index.htm
+++ b/controllers/statistics/index.htm
@@ -6,7 +6,14 @@
 
 <?= $this->makePartial('~/plugins/offline/mall/controllers/orders/_orders_scoreboard.htm', ['stats' => $stats, 'money' => $money]); ?>
 
+<?php
+    $byMonth = $mallstats->byMonth();
+    $byMonthMaxCount = $byMonth['byMonthMaxCount'];
+    $byMonthDataset = $byMonth['dataset'];
+?>
+
 <div class="scoreboard statboard m-y">
+    <br>
     <div class="row">
         <div class="col-md-4">
             <div class="statlistbox">
@@ -23,5 +30,49 @@
                     <br>
             </div>
         </div>
+        <div class="col-md-4">
+
+        </div>
+        <div class="col-md-4">
+        </div>
     </div>
+    <br>
+    <hr>
+    <div class="title-value">
+    <h4><?= e(trans('voilaah.mallstats::lang.titles.sales_period_month', ['year'=> date("Y")] )) ?></h4>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-md-3">
+            <div class="statlistbox">
+
+                <br>
+                <?php foreach(array_reverse($byMonthDataset) as $key => $value): ?>
+                    <div class=" col-md-6 col-sm-6"><?= $value->monthname . ' ' . $value->year ?></div>
+                    <div class="text-right col-md-6 col-sm-6"><?= $value->data ?></div>
+                    <div class="clearfix"></div>
+                <?php endforeach; ?>
+                <br>
+            </div>
+        </div>
+
+        <div class="col-md-9">
+
+            <div
+                class="control-chart wrap-legend"
+                data-control="chart-bar"
+                data-height="<?= $byMonthMaxCount ?>"
+                data-full-width="1">
+                <ul>
+                    <?php foreach($byMonthDataset as $key => $value): ?>
+                        <li><?= $value->monthname . ' ' . $value->year ?> <span><?= $value->data ?></span></li>
+                    <?php endforeach; ?>
+                </ul>
+            </div>
+        </div>
+
+    </div>
+    <br>
+    <hr>
+    <br>
 </div>
